--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Deploy Tailcall
         id: deploy-tailcall
-        uses: tailcallhq/gh-action
+        uses: tailcallhq/gh-action@main
         with:
           provider: "fly"
           fly-api-token: ${{ secrets.FLY_API_TOKEN }}
