update config file name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
           fly-api-token: ${{ secrets.FLY_API_TOKEN }}
           fly-app-name: "tailcall"
           fly-region: "lax"
-          tailcall-config: "config.graphql"
+          tailcall-config: "jsonplaceholder.graphql"
