--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           provider: "fly"
           fly-api-token: ${{ secrets.FLY_API_TOKEN }}
-          fly-app-name: "jsonplaceholder"
+          fly-app-name: "jsonplaceholder1"
           fly-region: "lax"
           tailcall-config: "jsonplaceholder.graphql"
